spark-analytics: Lambda batch+stream projection over chess.game-events (zio-spark 0.12.0, Scala 3.3 LTS, standalone schema)